<resources>
    <string name="app_name">车师傅</string>
    <string name="tech_delete_ongoing">正在删除中，请稍后</string>
    <string name="tech_pause_title">暂停执行</string>
    <string name="login_logo">LoginLogo</string>
    <string name="disp_null"> </string>
    <string name="tech_input_username">请输入手机号</string>
    <string name="tech_input_password">请输入密码</string>
    <string name="tech_login_button">登陆</string>
    <string name="tech_text_register">注册账号</string>
    <string name="tech_text_forget_password">忘记密码</string>
    <string name="tech_text_erect">|</string>
    <string name="tech_remember_passwd">记住密码</string>
    <string name="tech_task_list">任务</string>
    <string name="tech_message">消息</string>
    <string name="tech_personal_infomation">我的</string>
    <string name="tech_action_back">返回</string>
    <string name="tech_action_setting">登出</string>
    <string name="tech_user_login_error">登陆失败，请重新输入用户名密码</string>
    <string name="tech_account_info_not_null">用户名和密码不能为空</string>
    <string name="tech_network_unuseful">网络不可用</string>
    <string name="tech_pause_can_not_null">暂停原因和暂停时间不能为空</string>
    <string name="tech_pls_input_account_info">请输入用户名和密码</string>
    <string name="tech_type">技师种类</string>
    <string name="tech_station">所属工位</string>
    <string name="tech_team">所属班种</string>
    <string name="tech_modify_password">修改密码</string>
    <string name="tech_user_manual">使用帮助</string>
    <string name="tech_about_us">关于我们</string>
    <string name="tech_sign_out">退出登录</string>
    <string name="tech_company_descriptioin">深圳市航盛电子股份有限公司成立于1993年，是一家集成研发、制造、营销、售后服务于一体，为汽车整车企业开发生产智能网联汽车信息系统、智能驾驶辅助系统、新能源汽车控制系统等产品的高新技术企业公司</string>
    <string name="tech_company_address">地址:       深圳市宝安区福永镇和平村福园一路航盛工业园</string>
    <string name="tech_company_phone">电话:       0755&#8211;297766666</string>
    <string name="tech_company_fax">传真:       0755&#8211;27396568</string>
    <string name="tech_company_email">E-Mail:     hshr@hangsheng.com.cn</string>
    <string name="tech_no_data">没有数据可用</string>
    <string name="tech_load_more_data">查看更多数据</string>
    <string name="tech_task_title">任务概况</string>
    <string name="tech_register_step_01">注册信息(1 / 3)</string>
    <string name="tech_about_us_text">关于我们</string>
    <string name="tech_register_step_02">注册信息(2 / 3)</string>
    <string name="tech_register_step_03">注册信息(3 / 3)</string>
    <string name="tech_select_4s_shop">请选择4s店</string>
    <string name="tech_input_register_code">请输入您的注册码</string>
    <string name="tech_input_name">请输入您的姓名</string>
    <string name="tech_input_phone">请输入您的手机号</string>
    <string name="tech_input_job_id">请输入您的工作证号</string>
    <string name="tech_input_job_type">请输入您的技师种类</string>
    <string name="tech_input_job_team">请输入您的所属班组</string>
    <string name="tech_input_job_station">请输入您的所属工位</string>
    <string name="tech_input_password_again">请再次输入密码</string>
    <string name="tech_input_sms_code">请输入验证码</string>
    <string name="tech_reset_password_step1">重置密码(1/2)</string>
    <string name="tech_reset_password_step2">重置密码(2/2)</string>
    <string name="tech_shop_should_not_null">4s店名不允许为空</string>
    <string name="tech_regsiter_should_not_null">注册码不允许为空,可以联系4S获取注册码</string>
    <string name="tech_input_valid_phone">请输入合法手机号</string>
    <string name="tech_sms_code_error">验证码错误，请重新获取</string>
    <string name="tech_get_sms_code_failed">网络不可用，获取验证码失败</string>
    <string name="tech_password_check_failed">两次密码输入不一致</string>
    <string name="tech_touch_again_to_exit"> 再按一次退出程序</string>
    <string name="tech_button_cancel"> 取消</string>
    <string name="tech_delete"> 删除</string>
    <string name="tech_button_confirm"> 确定</string>
    <string name="tech_hint_input_pause_time"> 请输入暂停时间</string>
    <string name="tech_hint_input_pause_reason"> 请输入暂停原因</string>
    <string name="tech_hint_input_component_name"> 请输入零件名称</string>
    <string name="tech_hint_input_component_num"> 请输入零件数量</string>
    <string name="tech_hint_input_component"> 零件名和数量不允许为空</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_null"> </string>
    <string name="tech_task_need_component">所需零件</string>
    <string name="tech_task_add_component">添加零件</string>
    <string name="tech_reedit">重新编辑</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
