<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <com.example.vke.shop4stech.customLayout.RevealTextView
        android:id="@+id/tech_custom_dialog_title_text_view"
        android:text="@string/tech_pause_title"
        android:layout_width="wrap_content"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLightBlue"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/tech_custom_dialog_cut_line1"
        android:layout_below="@id/tech_custom_dialog_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:contentDescription="@null"
        android:src="@color/colorLightGray" />

    <com.example.vke.shop4stech.customLayout.RevealTextView
        android:id="@+id/tech_custom_dialog_content1_text_view"
        android:layout_below="@id/tech_custom_dialog_cut_line1"
        android:text="暂停原因: "
        android:layout_marginStart="15dp"
        android:textSize="17sp"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_toEndOf="@id/tech_custom_dialog_content1_text_view"
        android:layout_below="@id/tech_custom_dialog_cut_line1"
        android:id="@+id/tech_custom_dialog_content1_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_load_input"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:textSize="14sp"
        android:hint="@string/tech_hint_input_pause_reason"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <com.example.vke.shop4stech.customLayout.RevealTextView
        android:id="@+id/tech_custom_dialog_content2_text_view"
        android:layout_below="@id/tech_custom_dialog_content1_edit_view"
        android:text="暂停时间: "
        android:layout_marginStart="15dp"
        android:textSize="17sp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:labelFor="@+id/tech_custom_dialog_content2_edit_view"
        android:layout_toEndOf="@id/tech_custom_dialog_content2_text_view"
        android:layout_below="@id/tech_custom_dialog_content1_edit_view"
        android:id="@+id/tech_custom_dialog_content2_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_load_input"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/tech_hint_input_pause_time"
        android:textSize="14sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <ImageView
        android:id="@+id/tech_custom_dialog_cut_line2"
        android:layout_below="@id/tech_custom_dialog_content2_edit_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:contentDescription="@null"
        android:src="@color/colorLightGray"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_below="@id/tech_custom_dialog_cut_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tech_custom_dialog_cancel_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tech_button_cancel"
            android:textSize="17sp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorLightBlue"/>

        <Button
            android:id="@+id/tech_custom_dialog_confirm_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tech_button_confirm"
            android:textSize="17sp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorLightBlue"/>
    </LinearLayout>

</RelativeLayout>