<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.vke.shop4stech.activity.HomeActivity">

    <FrameLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/icon_bottom_mission_gray"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tech_task_list"
                android:textColor="@color/colorGray"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/icon_bottom_msg_gray"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tech_message"
                android:textAlignment="center"
                android:textColor="@color/colorGray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/icon_bottom_mine_gray"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tech_personal_infomation"
                android:textColor="@color/colorGray"
                android:textAlignment="center"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
